--- a/styles/sass/base/_general.scss
+++ b/styles/sass/base/_general.scss
@@ -16,12 +16,21 @@ img {
 h1,
 h2,
 h3,
-h4
-p {
+h4 p {
   margin: 0;
 }
 
 a {
   display: inline-block;
   text-decoration: none;
+  color: $main-light;
+}
+
+button {
+  display: inline-block;
+  padding: 0;
+}
+
+.hide {
+  display: none;
 }
