--- a/styles/style.css
+++ b/styles/style.css
@@ -269,6 +269,7 @@ html {
   overflow: hidden;
 }
 
+/* Colors */
 /* Mixins */
 ul {
   margin: 0;
@@ -288,14 +289,23 @@ img {
 h1,
 h2,
 h3,
-h4
-p {
+h4 p {
   margin: 0;
 }
 
 a {
   display: inline-block;
   text-decoration: none;
+  color: #ffffff;
+}
+
+button {
+  display: inline-block;
+  padding: 0;
+}
+
+.hide {
+  display: none;
 }
 
 html {
@@ -303,6 +313,7 @@ html {
 }
 
 body {
+  font-family: "Montserrat", sans-serif;
   font-size: 1.6rem;
 }
 
@@ -316,6 +327,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin: 0 -20px;
 }
 
 .col-auto {
@@ -330,88 +342,201 @@ body {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 8.3333%;
           flex: 0 0 8.3333%;
-  max-width: 8.3333%;
+  max-width: calc(8.3333% - 40px);
+  margin: 0 20px;
 }
 
 .col-2 {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 16.6666%;
           flex: 0 0 16.6666%;
-  max-width: 16.6666%;
+  max-width: calc(16.6666% - 40px);
+  margin: 0 20px;
 }
 
 .col-3 {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 25%;
           flex: 0 0 25%;
-  max-width: 25%;
+  max-width: calc(25% - 40px);
+  margin: 0 20px;
 }
 
 .col-4 {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 33.3333%;
           flex: 0 0 33.3333%;
-  max-width: 33.3333%;
+  max-width: calc(33.3333% - 40px);
+  margin: 0 20px;
 }
 
 .col-5 {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 41.6666%;
           flex: 0 0 41.6666%;
-  max-width: 41.6666%;
+  max-width: calc(41.6666% - 40px);
+  margin: 0 20px;
 }
 
 .col-6 {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 50%;
           flex: 0 0 50%;
-  max-width: 50%;
+  max-width: calc(50% - 40px);
+  margin: 0 20px;
 }
 
 .col-7 {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 58.3333%;
           flex: 0 0 58.3333%;
-  max-width: 58.3333%;
+  max-width: calc(58.3333% - 40px);
+  margin: 0 20px;
 }
 
 .col-8 {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 66.6666%;
           flex: 0 0 66.6666%;
-  max-width: 66.6666%;
+  max-width: calc(66.6666% - 40px);
+  margin: 0 20px;
 }
 
 .col-9 {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 75%;
           flex: 0 0 75%;
-  max-width: 75%;
+  max-width: calc(75% - 40px);
+  margin: 0 20px;
 }
 
 .col-10 {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 83.3333%;
           flex: 0 0 83.3333%;
-  max-width: 83.3333%;
+  max-width: calc(83.3333% - 40px);
+  margin: 0 20px;
 }
 
 .col-11 {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 91.6666%;
           flex: 0 0 91.6666%;
-  max-width: 91.6666%;
+  max-width: calc(91.6666% - 40px);
+  margin: 0 20px;
 }
 
 .col-12 {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 100%;
           flex: 0 0 100%;
-  max-width: 100%;
+  max-width: calc(100% - 40px);
+  margin: 0 20px;
+}
+
+.nav {
+  margin-top: 30px;
+}
+
+.nav .col-9.row {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.nav__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  height: 50px;
+  background-color: #ff3411;
+  border-radius: 30px;
+}
+
+.nav__item a {
+  text-transform: capitalize;
+  padding: 10px;
+}
+
+.btn {
+  background-color: #ff3411;
+  border: unset;
+  height: 45px;
+  color: #ffffff;
+  border-radius: 30px;
+  text-transform: capitalize;
+}
+
+.btn__menu {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
 }
 
 .header {
-  min-height: 100vh;
+  min-height: calc(100vh - 80px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+}
+
+.header h1 {
+  margin: 60px 0 10px;
+  font-weight: bold;
+  font-size: 3.6rem;
+  font-family: "Poppins", sans-serif;
+}
+
+.header h2 {
+  font-size: 1.8rem;
+  font-weight: normal;
+}
+
+.header__image.row {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.header__image img {
+  border-radius: 50%;
+}
+
+.header__icons {
+  margin: 35px 0 60px;
+}
+
+.header__button.row {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.header__item {
+  display: inline-block;
+}
+
+.header__item a {
+  color: #a3a3a3;
+  padding: 0 20px;
+  font-size: 2.2rem;
 }
 
 /* No CSS */
