Update accent color

--- a/styles/sass/base/_mixins-variables.scss
+++ b/styles/sass/base/_mixins-variables.scss
@@ -1,7 +1,8 @@
 /* Colors */
 $main-light: #ffffff;
 $main-dark: #000000;
-$accent: #ff3411;
+// $accent: #ff3411;
+$accent: cadetblue;
 
 /* Mixins */
 
