--- a/styles/sass/components/_components-index.scss
+++ b/styles/sass/components/_components-index.scss
@@ -1,6 +1,6 @@
-@import 'navigation';
-@import 'buttons';
-@import 'header';
-@import 'form';
-@import 'footer';
-
+@import "navigation";
+@import "scroll-indicator";
+@import "buttons";
+@import "header";
+// @import 'form';
+@import "footer";
