Add new component 'chart'

--- a/styles/sass/components/_components-index.scss
+++ b/styles/sass/components/_components-index.scss
@@ -2,5 +2,7 @@
 @import "scroll-indicator";
 @import "buttons";
 @import "header";
-// @import 'form';
+@import "about";
+@import "chart";
+// @import "form";
 @import "footer";
