Add styles for 'about' section + styles update

--- a/styles/sass/base/_typography.scss
+++ b/styles/sass/base/_typography.scss
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 1.6rem;
   overflow-x: hidden;
 }
