Add new variable for a gray color

--- a/styles/sass/base/_mixins-variables.scss
+++ b/styles/sass/base/_mixins-variables.scss
@@ -2,7 +2,8 @@
 $main-light: #ffffff;
 $main-dark: #000000;
 // $accent: #ff3411;
-$accent: cadetblue;
+$accent-primary: cadetblue;
+$accent-secondary: #a3a3a3;
 
 /* Mixins */
 
