--- a/styles/sass/components/_components-index.scss
+++ b/styles/sass/components/_components-index.scss
@@ -1,8 +1,11 @@
 @import "navigation";
 @import "scroll-indicator";
+@import "menu-arrow";
 @import "buttons";
 @import "header";
 @import "about";
 @import "chart";
-// @import "form";
+@import "experience";
+@import "education";
+@import "table";
 @import "footer";
