--- a/styles/sass/components/_footer.scss
+++ b/styles/sass/components/_footer.scss
@@ -3,7 +3,7 @@
 .footer {
   color: $main-light;
   padding: 40px 5%;
-  background-color: $accent;
+  background-color: $accent-primary;
   position: absolute;
   top: 0;
   left: 0;
