--- a/styles/sass/components/_about.scss
+++ b/styles/sass/components/_about.scss
@@ -1,17 +1,10 @@
 .about {
-  height: 100vh;
-  padding: 60px 0;
-
-  .row {
-    align-items: flex-start;
-  }
-
   h2 {
     margin-bottom: 40px;
   }
 
   &__intro {
-    margin-bottom: 70px;
+    margin-bottom: 50px;
   }
 
   &__skills {
@@ -21,21 +14,33 @@
     }
 
     .col-2 {
-      margin: 20px;
       text-align: center;
     }
 
     h3 {
-      font-size: 1.3rem;
+      font-size: 1.4rem;
       margin: unset;
+    }
+  }
+
+  &__languages,
+  &__hobbies {
+    li {
+      margin: 10px 0;
     }
   }
 
   &__personal {
     color: rgba(255, 255, 255, 0.7);
     padding: 40px;
-    background-color: $accent;
+    background-color: $accent-primary;
     border-radius: 10px;
+    font-size: 1.4rem;
+
+    h3 {
+      color: $main-light;
+      font-size: 2rem;
+    }
 
     ul {
       margin-bottom: 30px;
@@ -45,13 +50,18 @@
       }
     }
 
-    h3 {
-      color: $main-light;
-    }
-
     .courses__list {
+      margin-bottom: 50px;
       .courses__item {
         margin-bottom: 20px;
+
+        &:last-child {
+          margin-bottom: 0;
+        }
+
+        &.row {
+          align-items: center;
+        }
 
         a {
           color: rgba(255, 255, 255, 0.7);
