--- a/styles/style.css
+++ b/styles/style.css
@@ -906,6 +906,72 @@ body {
   margin-bottom: 0;
 }
 
+.portfolio {
+  min-height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.portfolio .row {
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.portfolio__list .col-4 {
+  height: 200px;
+  margin: 20px;
+}
+
+.portfolio__list .image__container {
+  position: relative;
+  height: 100%;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.portfolio__list .image__container .overlay {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 90%;
+  opacity: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 20px;
+  background-color: rgba(95, 158, 160, 0);
+  -webkit-transition: all 250ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
+  transition: all 250ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
+}
+
+.portfolio__list .image__container:hover .overlay {
+  background-color: cadetblue;
+  opacity: 1;
+}
+
+.portfolio__list .image__container h3 {
+  margin: 0;
+  font-weight: normal;
+}
+
+.portfolio__list .image__container img {
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 form .form {
   margin-bottom: 50px;
 }
