--- a/styles/sass/base/_general.scss
+++ b/styles/sass/base/_general.scss
@@ -68,3 +68,20 @@ button {
     left: -25px;
   }
 }
+
+.fab,
+.fas {
+  font-size: 2rem;
+}
+
+.fa-chevron-circle-right {
+  font-size: 1.8rem;
+}
+
+// .fa-html5 {
+//   color: #dd4b25;
+// }
+
+// .fa-css3 {
+//   color: #2ba9d9;
+// }
