--- a/styles/sass/components/_portfolio.scss
+++ b/styles/sass/components/_portfolio.scss
@@ -1,6 +1,8 @@
 .portfolio {
+  position: relative;
   min-height: 100vh;
   @include centerFlex();
+  // z-index: -1;
 
   .row {
     flex-wrap: wrap;
@@ -21,21 +23,46 @@
       .overlay {
         content: "";
         position: absolute;
-        top: 0;
+        bottom: 0;
         left: 0;
         width: 100%;
-        height: 90%;
-        opacity: 0;
-        display: flex;
-        align-items: center;
+        height: 30%;
+        // opacity: 0;
         padding: 20px;
-        background-color: rgba(95, 158, 160, 0);
-        transition: all 250ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
+        background-color: rgba(95, 158, 160, 1);
+        transition: all 200ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
+
+        &__title {
+          margin-bottom: 30px;
+
+          h3 {
+            font-weight: normal;
+            font-size: 1.5rem;
+          }
+
+          .row {
+            align-items: center;
+          }
+        }
+
+        &__list {
+          margin-top: 15rem;
+          transition: all 0.4s 0.2s ease;
+
+          .col-1 {
+            margin: 10px 20px;
+          }
+        }
       }
 
       &:hover .overlay {
-        background-color: rgba(95, 158, 160, 1);
+        height: 100%;
+        background-color: rgba(95, 158, 160, 0.8);
         opacity: 1;
+
+        .overlay__list {
+          margin-top: 0;
+        }
       }
 
       h3 {
