--- a/styles/style.css
+++ b/styles/style.css
@@ -354,6 +354,15 @@ button {
   left: -25px;
 }
 
+.fab,
+.fas {
+  font-size: 2rem;
+}
+
+.fa-chevron-circle-right {
+  font-size: 1.8rem;
+}
+
 html {
   font-size: 62.5%;
 }
@@ -717,6 +726,7 @@ body {
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
   background-color: unset;
+  z-index: 10;
 }
 
 .btn__contact {
@@ -907,6 +917,7 @@ body {
 }
 
 .portfolio {
+  position: relative;
   min-height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -939,26 +950,49 @@ body {
 .portfolio__list .image__container .overlay {
   content: "";
   position: absolute;
-  top: 0;
+  bottom: 0;
   left: 0;
   width: 100%;
-  height: 90%;
-  opacity: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  height: 30%;
+  padding: 20px;
+  background-color: cadetblue;
+  -webkit-transition: all 200ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
+  transition: all 200ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
+}
+
+.portfolio__list .image__container .overlay__title {
+  margin-bottom: 30px;
+}
+
+.portfolio__list .image__container .overlay__title h3 {
+  font-weight: normal;
+  font-size: 1.5rem;
+}
+
+.portfolio__list .image__container .overlay__title .row {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 20px;
-  background-color: rgba(95, 158, 160, 0);
-  -webkit-transition: all 250ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
-  transition: all 250ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
+}
+
+.portfolio__list .image__container .overlay__list {
+  margin-top: 15rem;
+  -webkit-transition: all 0.4s 0.2s ease;
+  transition: all 0.4s 0.2s ease;
+}
+
+.portfolio__list .image__container .overlay__list .col-1 {
+  margin: 10px 20px;
 }
 
 .portfolio__list .image__container:hover .overlay {
-  background-color: cadetblue;
+  height: 100%;
+  background-color: rgba(95, 158, 160, 0.8);
   opacity: 1;
+}
+
+.portfolio__list .image__container:hover .overlay .overlay__list {
+  margin-top: 0;
 }
 
 .portfolio__list .image__container h3 {
@@ -1013,6 +1047,7 @@ form textarea {
   height: 100%;
   -webkit-transform: translate3d(-100.5%, 0, 0);
           transform: translate3d(-100.5%, 0, 0);
+  z-index: 100;
 }
 
 .footer h2 {
