Update styles, add RWD styles

--- a/styles/sass/base/_mixins-variables.scss
+++ b/styles/sass/base/_mixins-variables.scss
@@ -17,10 +17,10 @@ $accent-secondary: #a3a3a3;
   align-items: center;
 }
 
-$screen-xxl: 0;
-$screen-xl: 0;
-$screen-md: 0;
-$screen-sm: 0;
+$screen-xxl: 1200px;
+$screen-xl: 968px;
+$screen-md: 768px;
+$screen-sm: 650px;
 $screen-xs: 0;
 $screen-xxs: 0;
 
