--- a/styles/sass/components/_footer.scss
+++ b/styles/sass/components/_footer.scss
@@ -32,4 +32,9 @@
     text-transform: capitalize;
     color: rgba(255, 255, 255, 0.5);
   }
+
+  // @include tablet-landscape {
+  //   padding: 40px 4%;
+  //   width: 38px;
+  // }
 }
