--- a/styles/sass/components/_portfolio.scss
+++ b/styles/sass/components/_portfolio.scss
@@ -2,7 +2,6 @@
   position: relative;
   min-height: 100vh;
   @include centerFlex();
-  // z-index: -1;
 
   .row {
     flex-wrap: wrap;
@@ -12,6 +11,16 @@
     .col-4 {
       height: 200px;
       margin: 20px;
+
+      @include tablet-landscape-sm {
+        flex-basis: 50%;
+        max-width: calc(50% - 40px);
+      }
+
+      @include tablet-portrait {
+        flex-basis: 70%;
+        max-width: calc(70% - 40px);
+      }
     }
 
     .image__container {
@@ -27,7 +36,6 @@
         left: 0;
         width: 100%;
         height: 30%;
-        // opacity: 0;
         padding: 20px;
         background-color: rgba(95, 158, 160, 1);
         transition: all 200ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
@@ -73,12 +81,17 @@
       img {
         height: 100%;
         object-fit: cover;
+
+        @include tablet-portrait {
+          width: 100%;
+        }
+      }
+    }
+
+    @include tablet-portrait {
+      &.row {
+        justify-content: center;
       }
     }
   }
-
-  //   &__item {
-  //     box-shadow: 0px 0px 5px black;
-  //     border-radius: 10px;
-  //   }
 }
