--- a/styles/sass/base/_general.scss
+++ b/styles/sass/base/_general.scss
@@ -48,8 +48,8 @@ button {
   transform: translate3d(0, 0, 0);
 }
 
-.wrap__right {
-  transform: translate3d(40%, 0, 0);
+.offcanvas__wrap--right {
+  transform: translate3d(36%, 0, 0);
 }
 
 .scroll__hint {
